# vascular-superenhancement-4d-flow

./: .gitattributes  .gitignore  LICENSE  README.md  environment_setup.md  pyproject.toml
config/: all_patients.yaml  default.yaml
hydra_configs/: config.yaml
hydra_configs/data/: default.yaml
hydra_configs/inference/: default.yaml
hydra_configs/model/: default.yaml
hydra_configs/model/discriminator/: none.yaml  patch_gan.yaml
hydra_configs/model/generator/: unet.yaml
hydra_configs/path_config/: all_patients.yaml  default.yaml
hydra_configs/train/: default.yaml
hydra_configs/wandb/: default.yaml
notebooks/: Mag2SSFP_pix2pix_segmentation_velocity.ipynb  all-time_to_each-time_nifti.ipynb  create_patient_database.ipynb  sandbox.ipynb  testing_patients.ipynb
notebooks/functional-stuff/: generate_splits.ipynb
notebooks/unit-testing/: datasets.ipynb  elastic_deformations.ipynb
scripts/: cron_sync.sh  sync_to_nas.py  trigger_backup.sh
splits/: splits_05-20-25.csv  splits_07-21-25.csv  splits_sample-patients.csv
src/vascular_superenhancement/: __init__.py
src/vascular_superenhancement/commands/: build_patients.py  catalog_dicoms.py  extract_archives.py
src/vascular_superenhancement/data_management/: __init__.py  archives.py  dicom_catalog.py  dicom_to_nifti.py  patients.py
src/vascular_superenhancement/inference/: inference.py
src/vascular_superenhancement/inferencing/: README.md
src/vascular_superenhancement/training/: dataloading.py  datasets.py  losses.py  model_factory.py  train.py  transforms.py
(+9 files in other folders)
