[project]
name = "vascular-superenhancement"
version = "0.1.0"
description = "Vascular superenhancement for 4D flow MRI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pydicom>=2.3.0",
    "nibabel>=5.1.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
extract-archives = "vascular_superenhancement.commands.extract_archives:main"
catalog-dicoms = "vascular_superenhancement.commands.catalog_dicoms:main"
build-patients = "vascular_superenhancement.commands.build_patients:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"] 